accordion style works! now i need a db

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,5 +1,39 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+
+  script(type="text/template",id="villain-template")
+    <%= url %>
+  script(type="text/template",id="accordion-group-template").
+    <div class="accordion-heading">
+      <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#heroList" href="#hero<%= id %>"><%= name %></a>
+    </div>
+    <div id="hero<%= id %>" class="accordion-body collapse" style="height: 0px;">
+      <div class="accordion-inner">
+        <ul>
+
+
+  script(type="text/template",id="infoTpl")
+    <p><strong>Email:</strong> <%= email %></p>
+    <p><%= id %></p>
+  script(type="text/template",id="group__row")
+    <p><strong>field:</strong> <%= field %></p>
+    <p>id: <%= id %></p>
+  script(type="text/template",id="groups__list")
+    <h2>Groups</h2>
+    <ul></ul>
+  script(type="text/template",id="bookmark__row")
+    <p><strong>field:</strong> <%= field %></p>
+    <p>id: <%= id %></p>
+  script(type="text/template",id="bookmarks__list")
+    <h2>Bookmarks</h2>
+    <ol></ol>
+  script(type="text/template",id="layout-template")
+      <div id="user"></div>
+      <div id="groups"></div>
+      <div id="bookmarks"></div>
+  .container
+    h1= title
+    p Welcome to #{title}
+    #app-container
+    #content
