--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -2,8 +2,22 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href="stylesheets/bootstrap.min.css",rel="stylesheet",media="screen")
+    style.
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+
+    style(media='screen',type='text/css').
+      .defaultText { width: 300px;}
+      .defaultTextActive { color: #a1a1a1; font-style: italic;}
+
+    link(href="/stylesheets/bootstrap-responsive.css", rel="stylesheet")
+    // HTML5 shim, for IE6-8 support of HTML5 elements
+    //if lt IE 9
+      script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
   body
+    include header
     block content
     block footer
       block scripts
@@ -11,4 +25,7 @@ html
         script(src='js/jquery-2.0.0.min.js')
         script(src='js/json2.js')
         script(src='js/backbone-min.js')
-        script(src='js/backbone-demo.js')
+        script(src='js/backbone.marionette.min.js')
+
+        script(src='js/bootstrap.min.js')
+        script(src='js/marionnette-demo.js')
