--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -15,17 +15,17 @@ html
     link(href="/stylesheets/bootstrap-responsive.css", rel="stylesheet")
     // HTML5 shim, for IE6-8 support of HTML5 elements
     //if lt IE 9
-      script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
+      script(type='text/javascript', src="http://html5shim.googlecode.com/svn/trunk/html5.js")
   body
     include header
     block content
     block footer
       block scripts
-        script(src='js/underscore-min.js')
-        script(src='js/jquery-2.0.0.min.js')
-        script(src='js/json2.js')
-        script(src='js/backbone-min.js')
-        script(src='js/backbone.marionette.min.js')
+        script(type='text/javascript', src='js/underscore-min.js')
+        script(type='text/javascript', src='js/jquery-2.0.0.min.js')
+        script(type='text/javascript', src='js/json2.js')
+        script(type='text/javascript', src='js/backbone-min.js')
+        script(type='text/javascript', src='js/backbone.marionette.min.js')
 
-        script(src='js/bootstrap.min.js')
-        script(src='js/marionnette-demo.js')
+        script(type='text/javascript', src='js/bootstrap.min.js')
+        script(type='text/javascript', src='js/marionnette-demo.js')
