--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -25,7 +25,10 @@ html
         script(type='text/javascript', src='js/jquery-2.0.0.min.js')
         script(type='text/javascript', src='js/json2.js')
         script(type='text/javascript', src='js/backbone-min.js')
-        script(type='text/javascript', src='js/backbone.marionette.min.js')
+        script(type='text/javascript', src='js/backbone-forms.min.js')
+        script(type='text/javascript', src='js/backbone-forms-list.min.js')
+        script(type='text/javascript', src='js/backbone-forms-bootstrap.js')
+        script(type='text/javascript', src='js/backbone-marionette.min.js')
 
         script(type='text/javascript', src='js/bootstrap.min.js')
         script(type='text/javascript', src='js/marionnette-demo.js')
