--- a/src/views/header.jade
+++ b/src/views/header.jade
@@ -10,3 +10,8 @@
         ul.nav
           li
             a(href="/") home
+      block userbox
+        ul(class="nav pull-right")
+          li(class="dropdown")
+            a(href="#",data-toggle="dropdown",class="dropdown-toggle") Log in
+            #user_box.dropdown-menu
