added user signup functionality. this does not include tying in group/bookmarks to that user.

--- a/src/views/header.jade
+++ b/src/views/header.jade
@@ -11,7 +11,4 @@
           li
             a(href="/") home
       block userbox
-        ul(class="nav pull-right")
-          li(class="dropdown")
-            a(href="#",data-toggle="dropdown",class="dropdown-toggle") Log in
-            #user_box.dropdown-menu
+        ul#user_box(class="nav pull-right")
