--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -4,7 +4,7 @@ block content
     <form id="submit_form" class='form-horizontal',method='post'>
       <div class="signup-label span5 msg-success hide label label-success">Signed up!</div>
       <div class="signup-label span5 error-bad-auth hide label label-warning">Username and/or password incorrect.</div>
-      <div class="signup-label span5 error-unknown hide label label-warning"><%- stateDetails %></div>
+      <div class="signup-label span5 error-unknown hide label label-warning">EXPLAIN_ERROR_HERE</div>
       <div class="control-group">
         <label class="control-label" for="inputEmail">Email</label>
         <div class="controls">
