--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -42,18 +42,34 @@ block content
   script#login-template(type="text/template").
     <a href="#" data-toggle="dropdown" class="dropdown-toggle"><%- action_name %></a>
     <div class='dropdown-menu'>
-      <div class="login-label span5 msg-success hide label label-success">You are now logged in.</div>
-      <div class="login-label span5 error-bad-auth hide label label-warning">Username and/or password incorrect.</div>
-      <div class="login-label span5 error-unknown hide label label-warning"><%- stateDetails %></div>
-      <br class="span6">
+      <div class="login-label span4 msg-success hide label label-success">You are now logged in.</div>
+      <div class="login-label span4 error-bad-auth hide label label-warning">Username and/or password incorrect.</div>
+      <div class="login-label span4 error-unknown hide label label-warning"><%- stateDetails %></div>
+      <br class="span4">
+
       <p id="user-hail" class="navbar-text hide">Welcome!&nbsp;
         <a id="logout" class="btn" href="/logout">Logout</a>
       </p>
+
       <form id="login" action="#" method="post">
-        <h1>Login</h1>
-        <input name="email" type="text" value="<%- email %>">
-        <input name="password" type="password" value="<%- password %>">
-        <input type="submit" value="Log In">
+      <div class="control-group">
+        <label class="control-label" for="inputEmail">Email</label>
+        <div class="controls">
+          <input type="email" id="inputEmail" name="email" class="span4" placeholder="Email" value="<%- email %>" required>
+        </div>
+      </div>
+      <div class="control-group">
+        <label class="control-label" for="inputPassword">Password</label>
+        <div class="controls">
+          <input type="password" id="inputPassword" class="span4" name="password" placeholder="Password" value="<%- password %>" required>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <div class="controls">
+          <input type="submit" class="btn" value="Log In">
+        </div>
+      </div>
       </form>
     </div>
 
