--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -2,20 +2,21 @@ doctype 5
 html
   head
     title= title
-    link(href="stylesheets/bootstrap.min.css",rel="stylesheet",media="screen")
-    style.
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
+    block styles
+      link(href="stylesheets/bootstrap.min.css",rel="stylesheet",media="screen")
+      style.
+        body {
+          padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        }
 
-    style(media='screen',type='text/css').
-      .defaultText { width: 300px;}
-      .defaultTextActive { color: #a1a1a1; font-style: italic;}
+      style(media='screen',type='text/css').
+        .defaultText { width: 300px;}
+        .defaultTextActive { color: #a1a1a1; font-style: italic;}
 
-    link(href="/stylesheets/bootstrap-responsive.css", rel="stylesheet")
-    // HTML5 shim, for IE6-8 support of HTML5 elements
-    //if lt IE 9
-      script(type='text/javascript', src="http://html5shim.googlecode.com/svn/trunk/html5.js")
+      link(href="/stylesheets/bootstrap-responsive.css", rel="stylesheet")
+      // HTML5 shim, for IE6-8 support of HTML5 elements
+      //if lt IE 9
+        script(type='text/javascript', src="http://html5shim.googlecode.com/svn/trunk/html5.js")
   body
     include header
     block content
@@ -31,4 +32,5 @@ html
         script(type='text/javascript', src='js/backbone-marionette.min.js')
 
         script(type='text/javascript', src='js/bootstrap.min.js')
+        script(type='text/javascript', src='js/user_auth.js')
         script(type='text/javascript', src='js/marionnette-demo.js')
